# whattheflag

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/whattheflag/: cli.py  core.py  flags_db.py  output.py  utils.py
src/whattheflag/tools/: awk.json  curl.json  df.json  docker.json  du.json  find.json  git.json  grep.json  gzip.json  jq.json  kubectl.json  nc.json  ps.json  rsync.json  sed.json  ssh.json  tar.json  top.json  unzip.json  wget.json  xargs.json  yq.json  zip.json
